--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>Programinhas</h1>
+    <button type="button" onclick="calculaimc()">Calculadora IMC</button>
+    <button type="button" onclick="convertetemperatura()">Conversor de temperatura</button>
+
     <script src="desafio2.js"></script>
+    <script src="desafio3.js"></script>
 </body>
 </html>
