--- a/desconto-funcionario.html
+++ b/desconto-funcionario.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desconto Funcionário</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <h1>Desconto</h1>
+
+    <main>
     <form action="">
 
         <label for="valordacompra">Valor da Compra</label>
@@ -22,6 +27,7 @@
         <button type="button" id="calcular">Calcular</button>
 
     </form>
+    </main>
 
     <script>
         function aplicaDesconto(valor, selecione) {
