--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafios e exercícios</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Desafios e exercícios</h1>
@@ -13,6 +14,8 @@
     <nav>
         <ul>
             <li><a href="classificacao-triangulo.html">Exercício1 - Classificação de um Triângulo</a></li>
+            <li><a href="busca-nome.html">Exercício4 - Busca Nome</a>
+            </li>
         </ul>
     </nav>
     
