--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafios e exercícios</title>
+    <script src="/logica-de-programacao-KTC/estilos.js"></script>
 </head>
 <body>
     <h1>Desafios e exercícios</h1>
